--- a/cubing/wca_id_records.html
+++ b/cubing/wca_id_records.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-parent: Cubing
+title: WCA ID Records
 ---
 This is a small (not necessarily well coded) program which shows you the results of cubers with a specific WCA ID year. It requires Java to run and uses JavaFX (so you don't need to and actually can't use the console).<br>
 There also is a <a href="https://www.speedsolving.com/threads/odd-wca-stats-stats-request-thread.26121/page-250#post-1382600" target="_blank">SpeedSolving Forums post</a> for this.<br>
